<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">keke</string>
    <string name="loading">正在加载....</string>
    <string name="sd_no_use">无法下载安装文件，请检查SD卡是否挂载</string>
    <string name="cancel">取消</string>
    <string name="xlistview_header_hint_loading">努力加载中。。。</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_footer_hint_ready">释放加载更多</string>
    <string name="xlistview_footer_hint_no_more">已经是最后一页了</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="about_title">反馈</string>
    <string name="account_title">账号管理</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="account_sina_name_unbound">未绑定</string>
    <string name="account_qq">QQ账号</string>
    <string name="comment_title">评论</string>
    <string name="comment_send">发布</string>
    <string name="comment_et">你怎么看</string>
    <string name="companyinfo_title">企业介绍</string>
    <string name="title_hotpot">最新热点</string>
    <string name="article_time">1小时前</string>
    <string name="article_source_notice">原文来自</string>
    <string name="article_editor">，壳壳网编译</string>
    <string name="article_title">2014(广州)国际电子商务博览会</string>
    <string name="article_sourse">Quartz</string>
    <string name="hire_title">北京-资深设计师</string>
    <string name="hire_introduction">企业介绍</string>
    <string name="title_share">分享会</string>
    <string name="share_article_place">地    点 ：</string>
    <string name="share_article_place_detail">上海市洛川中路普善路</string>
    <string name="share_article_timer">时    间 ：</string>
    <string name="share_article_timer_detial">2014-03-30至2018-48-88</string>
    <string name="share_article_host">主办方 ：</string>
    <string name="share_article_host_detial">上海省网商协会</string>
    <string name="share_article_phone">电    话 ：</string>
    <string name="share_article_phone_detial">13661985020</string>
    <string name="share_article_contacter">联系人 ：</string>
    <string name="share_article_contacter_detial">杨先生</string>
    <string name="font_title">正文字号</string>
    <string name="font_notice_title">以下是正文预览效果：</string>
    <string name="font_notice">		根据国资委历年公布的中央企业分户国有资产运营情况，利润排名前十的企业以能源和通信为主</string>
    <string name="loading_keke">壳壳网</string>
    <string name="loading_notice_zh">有深度的商业资讯</string>
    <string name="loading_notice_en">in-depth business information</string>
    <string name="activity_login">登录</string>
    <string name="offline_title">离线设置</string>
    <string name="title_info">资讯</string>
    <string name="title_column">专栏</string>
    <string name="title_case">营销案例</string>
    <string name="title_hire">招聘</string>
    <string name="case_item_title">被高估的唯品会神话：利润说明不了什么</string>
    <string name="case_item_source">唯品会</string>
    <string name="case_item_time">2小时前</string>
    <string name="comment_item_name">用户名</string>
    <string name="comment_item_content">暂时没发现有什么缺点，就是价格有点小贵，能降点价就好了。</string>
    <string name="share_signup_place">姓       名:</string>
    <string name="share_signup_timer">公司名称:</string>
    <string name="share_signup_host">参加人数:</string>
    <string name="share_signup_phone">联系电话:</string>
    <string name="share_signup_pay">报名费用:</string>
    <string name="share_signup_pay_way">付款方式:</string>
    <string name="share_cb_zhifu">支  付  宝 </string>
    <string name="share_cb_bank">中信银行</string>
    <string name="share_cb_scene">现场支付</string>
    <string name="share_btn_submit">确认提交</string>
    <string name="share_btn_cancel">取消</string>
    <string name="login_notice_1">登陆后</string>
    <string name="login_notice_2">可发表评论和报名参加分享会</string>
    <string name="logout_confirm">退出登录</string>
    <string name="search_et">搜索你感兴趣的内容</string>
    <string name="count_manage">账号管理</string>
    <string name="title_push">头条推送</string>
    <string name="notice_music">提示音</string>
    <string name="flow_no_download">2G/3G不下载图片</string>
    <string name="clear_cashe">清除缓存</string>
    <string name="setting_score">评分</string>
    <string name="setting_version">版本</string>
    <string name="setting_about">关于</string>
    <string name="setting_recommend">应用推荐</string>
    <string name="hire_item_title">空间再大，也大不过梦想</string>
    <string name="hire_item_place">北京</string>
    <string name="home_item_top_title">俞敏洪：新东方是教育领域的大腿</string>
    <string name="activity_no_login">未登录</string>
    <string name="share_item_title">z014(广州)电子商务博览会</string>
    <string name="share_item_place">广州</string>
    <string name="share_item_time">2014-03-24至2014-03-26</string>
    <string name="share_item_attend_num">21人参加</string>
    <string name="no_comment">评论内容不能为空</string>
    <string name="hire_occupation">上海-Android开发工程师</string>
    <string name="email_location">洛川中路普善路</string>
    <string name="map_location">洛川中路普善路</string>
    <string name="map_title">你妈妈</string>
    <string name="title_offline">离线下载</string>
    <string name="title_setting">设置</string>
    <string name="title_head">首页</string>
</resources>