<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/comment_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/comment_item_name"
        android:textColor="#7d7d7d"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/comment_item_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/comment_item_name"
        android:layout_alignTop="@+id/comment_item_name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/comment_item_name"
        android:gravity="center"
        android:text="·"
        android:textColor="#7d7d7d"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/comment_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/comment_item_dot"
        android:text="@string/article_time"
        android:textColor="#7d7d7d"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/comment_item_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_item_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/comment_item_content"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/comment_item_line"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@+id/comment_item_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/line_01" />

</RelativeLayout>