<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/case_item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/case_item_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/case_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/case_item_top"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:text="@string/case_item_title"
            android:textColor="#434343"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/case_item_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/case_item_title"
            android:layout_below="@+id/case_item_title"
            android:layout_marginTop="5dp"
            android:text="@string/case_item_source"
            android:textColor="#7d7d7d"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/case_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/case_item_source"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/case_item_source"
            android:text="@string/case_item_time"
            android:textColor="#7d7d7d"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/case_item_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/case_item_time"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/case_item_img"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/line_01" />
    </RelativeLayout>

</RelativeLayout>