<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/comment_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f6f6f6" >

        <TextView
            android:id="@+id/comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/comment_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/comment_line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line_01" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comment_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" >

        <ImageView
            android:id="@+id/comment_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="terminate"
            android:src="@drawable/finish_selector" />

        <Button
            android:id="@+id/comment_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/comment_send"
            android:textColor="#007aff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/comment_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/comment_send"
            android:layout_toRightOf="@+id/comment_finish"
            android:background="@drawable/search_et_bg"
            android:gravity="center_vertical"
            android:hint="@string/comment_et"
            android:imeOptions="actionSearch"
            android:paddingLeft="3dp"
            android:textColor="#7d7d7d"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.stg.keke.widget.xlistview.XListView
        android:id="@+id/comment_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/comment_bottom_layout"
        android:layout_below="@+id/comment_top_layout"
        android:divider="@null" />

</RelativeLayout>