<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/home_item_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/home_item_1_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/home_item_top_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/home_item_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#50000000"
            android:padding="10dp"
            android:text="俞敏洪：新东方是教育领域的大腿"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/home_item_2_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/home_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:text="@string/case_item_title"
            android:textColor="#434343"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_item_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/home_item_title"
            android:layout_below="@+id/home_item_title"
            android:layout_marginTop="5dp"
            android:text="@string/case_item_source"
            android:textColor="#7d7d7d"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/home_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/home_item_source"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/home_item_source"
            android:text="@string/case_item_time"
            android:textColor="#7d7d7d"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/home_item_source"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/line_01" />
    </RelativeLayout>

</LinearLayout>