<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/account_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f6f6f6" >

        <TextView
            android:id="@+id/account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/account_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/account_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line_01" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_sina_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/account_top_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/sina_weibo"
            android:textColor="#7d7d7d"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/account_sina_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="-5dp"
            android:src="@drawable/btn_set_up" />

        <TextView
            android:id="@+id/account_sina_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/account_sina_set"
            android:text="@string/account_sina_name_unbound"
            android:textColor="#7d7d7d"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line_01" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_qq_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/account_sina_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/account_qq"
            android:textColor="#7d7d7d"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/account_qq_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="-5dp"
            android:src="@drawable/btn_set_up" />

        <TextView
            android:id="@+id/account_qq_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/account_qq_set"
            android:text="@string/account_sina_name_unbound"
            android:textColor="#7d7d7d"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line_01" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line_01" />

        <ImageView
            android:id="@+id/account_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="terminate"
            android:src="@drawable/finish_selector" />
    </RelativeLayout>

</RelativeLayout>